2006-12-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/python/setup.py, scripts/perl/Makefile.PL: Updates from
	Rathann Mierzejewski to check for src/.libs directories. Prevents
	"chicken and egg" problem with what component is built first.

2006-12-16  Noel O'Boyle <baoilleach@gmail.com>

	* fingerprint.cpp/.h: Changed the FindFingerprint method to accept
	const string& instead of string&. This is necessary for access to this
	function from Python.
	
	* scripts/python/pybel.py, testpybel.py, pybelapi.html: Added a method
	to Molecule for calculating a molecular fingerprint, handled by a new
	Fingerprint class.
	
2006-12-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, Doxyfile: Bump to 2.1.0b4 for upcoming snapshot.

	* src/*.cpp: Update class documentation (for many classes) to
	reflect <openbabel/header.h> syntax. Makes API documentation
	consistent with usage.

	* src/obconversion.cpp, src/obconversion.h: Enable on-the-fly line
	ending translation for input. Windows and Classic Mac files should
	now translate without problems. Right now, XML files are excluded
	through the new READXML flag.

	* src/formats/xml: Update for READXML flag and move of xml.h
	header.

	* include/openbabel/xml.h: Move header for public use.

	* src/formats/fastsearchformat.cpp: Add READBINARY flag.

	* include/openbabel/Makefile.am, Makefile.in: Fix "make dist"
	target to remove generated babelconfig.h header for snapshots and
	releases.

	* scripts/Makefile.am, scripts/Makefile.in: Make sure to clean
	java targets.

	* data/mm2.prm, data/Makefile.am, data/Makefile.in: MM2 parameters.

2006-12-15 Chris Morley <ob@gaseq.co.uk>

	* tools/babel.cpp, src/obconversion.cpp, src/formats/obmoleculeformat.h:
	Move -k option help info into OBConversion::Description, where it can
	be used by other front-ends. (The info in help() is specific to the
	command-line interface.) Register it as having no parameters.
	