@@ -1,3 +1,14 @@
+2006-12-20  Noel O'Boyle <baoilleach@gmail.com>
+
+	* windows-vc2005/OBPython/setup.py: Install data files (e.g.
+	patterns.txt needed for FP3) into site-packages/openbabel_data
+
+	* scripts/openbabel-python.i: For Windows installs, set BABEL_DATADIR
+	to the location into which the binary installer installs the data files
+
+	* src/fingerprints/finger3.cpp: Replace instances of "/" by
+	FILE_SEP_CHAR
+
 2006-12-18  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* scripts/python/setup.py, scripts/perl/Makefile.PL: Updates from
